--- a/Others/index.html
+++ b/Others/index.html
@@ -4,7 +4,7 @@
     <title>Vincent Escueta  |  UCCC 2018</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Vincent Escueta">
     <!-- Bootstrap Core CSS -->
@@ -65,22 +65,22 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/NameTag.png" width="540px" />
+                    <img src="img/NameTag.png"  />
                     <p align="middle">Nametag made in Adobe Illustrator</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/facebook_watermark3.png" width="540px" />
+                    <img src="img/facebook_watermark3.png"  />
                     <p align="middle">Facebook watermark made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6 col-sm-6 text-center">                    
-                    <img src="img/Flyerfront.png" width="420px" />
+                    <img src="img/Flyerfront.png"  />
               </div>
               <div class="col-lg-6 col-sm-6 text-center">
-                    <img src="img/Flyerback.png" width="420px" />
+                    <img src="img/Flyerback.png"  />
               </div>
             </div>
             <div class="row">
@@ -90,13 +90,13 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/FrontandBack Cover.png" width="720px" />
+                    <img src="img/FrontandBack Cover.png"  />
                     <p align="middle">Front and back cover of the brochure made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/snapchat.png" width="420px" />
+                    <img src="img/snapchat.png"  />
                     <p align="middle">Snapchat filter made in Adobe Photoshop</p>
               </div>
             </div>
