--- a/Others/index.html
+++ b/Others/index.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+<style>  
+    div.padded {  
+      padding-top: 0px;  
+      padding-right: 100px;  
+      padding-bottom: 0.25in;  
+      padding-left: 100px;  
+    }  
+  </style> 
     <title>Vincent Escueta  |  UCCC 2018</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Vincent Escueta">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
 
@@ -20,7 +29,7 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
 </head>
-<body id="page-top">
+<body>
  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -65,22 +74,22 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/NameTag.png"  />
+                    <img src="img/NameTag.png" width="540px" />
                     <p align="middle">Nametag made in Adobe Illustrator</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/facebook_watermark3.png"  />
+                    <img src="img/facebook_watermark3.png" width="540px" />
                     <p align="middle">Facebook watermark made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6 col-sm-6 text-center">                    
-                    <img src="img/Flyerfront.png"  />
+                    <img src="img/Flyerfront.png" width="420px" />
               </div>
               <div class="col-lg-6 col-sm-6 text-center">
-                    <img src="img/Flyerback.png"  />
+                    <img src="img/Flyerback.png" width="420px" />
               </div>
             </div>
             <div class="row">
@@ -90,13 +99,13 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/FrontandBack Cover.png"  />
+                    <img src="img/FrontandBack Cover.png" width="720px" />
                     <p align="middle">Front and back cover of the brochure made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/snapchat.png"  />
+                    <img src="img/snapchat.png" width="420px" />
                     <p align="middle">Snapchat filter made in Adobe Photoshop</p>
               </div>
             </div>
