photos in class

--- a/Others/index.html
+++ b/Others/index.html
@@ -73,39 +73,39 @@
                 </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/NameTag.png" width="540px" />
+              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+                    <img src="img/NameTag.png"  />
                     <p align="middle">Nametag made in Adobe Illustrator</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/facebook_watermark3.png" width="540px" />
+              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+                    <img src="img/facebook_watermark3.png"  />
                     <p align="middle">Facebook watermark made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-6 col-sm-6 text-center">                    
-                    <img src="img/Flyerfront.png" width="420px" />
+              <div class="col-lg-6 col-sm-6 text-center photos">
+                    <img src="img/Flyerfront.png"  />
               </div>
-              <div class="col-lg-6 col-sm-6 text-center">
-                    <img src="img/Flyerback.png" width="420px" />
+              <div class="col-lg-6 col-sm-6 text-center photos">
+                    <img src="img/Flyerback.png"  />
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center">
+              <div class="col-lg-8 col-lg-offset-2 text-center photos">
                     <p align="middle">Front and back of flyer made in Adobe Illustrator</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/FrontandBack Cover.png" width="720px" />
+              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+                    <img src="img/FrontandBack Cover.png"  />
                     <p align="middle">Front and back cover of the brochure made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/snapchat.png" width="420px" />
+              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+                    <img src="img/snapchat.png"  />
                     <p align="middle">Snapchat filter made in Adobe Photoshop</p>
               </div>
             </div>
