--- a/Rasterizester/index.html
+++ b/Rasterizester/index.html
@@ -167,23 +167,26 @@
             <div class="row">
                 
                     <!-- <img src="images/example_image.jpg" width="800px" /> -->
-                <div class="col-lg-2 col-lg-offset-1 col-sm-6 text-center photos">
+                <div class="col-lg-4 col-sm-6 text-center photos">
                     <img src="./images/part4_1.png" />
                     <p align="middle">Figure 10: Scaled smaller robot. </p>
                 </div>
-                <div class="col-lg-2 col-sm-6 text-center photos">
+                <div class="col-lg-4 col-sm-6 text-center photos">
                     <img src="./images/part4_2.png" />
                     <p align="middle">Figure 11: Robot's left arm rotated around the origin then moved back over. He says "hi!" </p>
                 </div>
-                <div class="col-lg-2 col-sm-6 text-center photos">
+                <div class="col-lg-4 col-sm-6 text-center photos">
                     <img src="./images/part4_3.png" />
                     <p align="middle">Figure 12: Translation of the left leg up. </p>
-                    <img src="./images/part4_4.png" />
+                    
                 </div>
-                <div class="col-lg-2 col-sm-6 text-center photos">
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-sm-6 text-center photos">
+                    <img src="./images/part4_4.png" />
                     <p align="middle">Figure 13: Original size and translation of right leg up. </p>
                 </div>
-                <div class="col-lg-2 col-sm-6 text-center photos">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part4_5.png" />
                     <p align="middle">Figure 14: Original robot. Series of pictures looks like he's stepping towards you. </p>
                 </div>
