--- a/Rasterizester/index.html
+++ b/Rasterizester/index.html
@@ -258,35 +258,38 @@
         </p>
         <div class="container">
             <div class="row">
-                    
-                <div class="col-lg-3 col-sm-6 text-center photos">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <!-- <img src="images/example_image.jpg" width="800px" /> -->
                     <img src="./images/part7_0_n.png" />
                     <p align="middle"> Figure 19: Scene from Starcraft II with level 0 MIP mapping and using nearest pixel sampling </p>
                 </div>
-                <div class="col-lg-3 col-sm-6 text-center photos">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part7_l_n.png" />
                     <p align="middle"> Figure 20: Calculated level MIP mapping using nearest pixel sampling</p>
                 </div>
-                <div class="col-lg-3 col-sm-6 text-center photos">
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center photos">
                     <img src="./images/part7_0_b.png" />
                     <p align="middle"> Figure 21 Level 0 MIP mapping using a bilinear filtering</p>
                 </div>
-                <div class="col-lg-3 col-sm-6 text-center photos">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part7_l_b.png" />
                     <p align="middle"> Figure 22: Calculated level MIP mapping using a bilinear filtering</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-sm-6 text-center photos">
+                <div class="col-lg-8 col-lg-offset-2 text-center photos">
                     <img src="./images/part7_tri.png" />
                     <p align="middle"> Figure 23: Calculated level MIP mapping using a trilinear filtering</p>
                 </div>
-                <div class="col-lg-4 col-sm-6 text-center photos">
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part7_n_zoom.png" />
                     <p align="middle"> Figure 24: Zoomed nearest pixel sampling</p>
                 </div>
-                <div class="col-lg-4 col-sm-6 text-center photos">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part7_b_zoom.png" />
                     <p align="middle"> Figure 25: Zoomed bilinear filtering</p>
                </div>
