--- a/Others/index.html
+++ b/Others/index.html
@@ -67,19 +67,19 @@
 <h1 align="middle">University Catholic Conference of California 2018 Website, Fliers, Nametags, etc.</h1>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center">
                   <br><br><h2><a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank">Click here for the UCCC 2018 Website</a></h2>
                   <p align="middle">Made with HTML, CSS3, and JavaScript</p><br><br><br><br>
                 </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="img/NameTag.png"  />
                     <p align="middle">Nametag made in Adobe Illustrator</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="img/facebook_watermark3.png"  />
                     <p align="middle">Facebook watermark made in Adobe Photoshop</p>
               </div>
@@ -93,18 +93,18 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <p align="middle">Front and back of flyer made in Adobe Illustrator</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="img/FrontandBack Cover.png"  />
                     <p align="middle">Front and back cover of the brochure made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="img/snapchat.png"  />
                     <p align="middle">Snapchat filter made in Adobe Photoshop</p>
               </div>
