--- a/Rasterizester/index.html
+++ b/Rasterizester/index.html
@@ -269,7 +269,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center photos">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part7_0_b.png" />
                     <p align="middle"> Figure 21 Level 0 MIP mapping using a bilinear filtering</p>
                 </div>
