--- a/LensSimulator/index.html
+++ b/LensSimulator/index.html
@@ -1,4 +1,4 @@
-c<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>Vincent Escueta  |  Lens Simulator</title>
@@ -153,7 +153,7 @@ c<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/
         <p> Lastly, the close focus is calculated using the close focus distance in front of the lens. It is simply a ray traced from the close focus distance in front of the lens on the z axis that goes diagonally towards the lenses. The point the ray hits the z axis again after being traced backwards is the close focus. Figure 16 show the results of calculations of some camera lenses.</p>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-sm-6 text-center photos">
+                <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="images/part1_table.png" />
                     <p align="middle">Figure 16: Calculations of some camera lenses.</p>
                 </div>
@@ -181,7 +181,7 @@ c<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/Fish_eye.png" width="1000px">
+                    <img src="images/Fish_Eye.png" width="1000px">
                     <p align="middle">Figure 20: Muller 16mm/f4 155.9FOV fisheye lens / Some points are (28.6893, -4700.97), (31.8559, -51.0458), (33.727, -39.525), (36.1739, -33.1267) (40.2041, -28.5056), (42.9388, -26.8565) </p>
                 </div>
             </div>
