--- a/Rasterizester/index.html
+++ b/Rasterizester/index.html
@@ -209,8 +209,7 @@
 &#945 = &#945_numerator / &#945_denominator
 &#946_numerator = (y - y2) * (x0 - x2) - (x - x2) * (y0 - y2)
 &#946_denominator = (y1 - y2) * (x0 - x2) - (x1 - x2) * (y0 - y2)
-&#946 = &#946_numerator / &#946_denominator 
-            </pre>
+&#946 = &#946_numerator / &#946_denominator </pre>
         </p>
         <p>Then I get &#947 and p in svg.cpp as I did in the equations shown above then used p to get a color which was placed on the corresponding (x, y) point I was originally given.
          </p>
