--- a/Rasterizester/index.html
+++ b/Rasterizester/index.html
@@ -140,20 +140,22 @@
         <div class="container">
             <div class="row">
                 
-                <div class="col-lg-3 col-sm-6 text-center photos">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <!-- <img src="images/example_image.jpg" width="800px" /> -->
                     <img src="./images/part3_1px.png" />
                     <p align="middle">Figure 6: Triangles at sample rate at 1 pixel </p>
                 </div>
-                <div class="col-lg-3 col-sm-6 text-center photos">
+               <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part3_4px.png" />
                     <p align="middle">Figure 7: Triangles at sample rate at 4 pixel</p>
                 </div>
-                <div class="col-lg-3 col-sm-6 text-center photos">
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part3_16px.png" />
                     <p align="middle">Figure 8: Triangles at sample rate at 16 pixel</p>
                 </div>
-                <div class="col-lg-3 col-sm-6 text-center photos">
+                <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="./images/part3_error.png" />
                     <p align="middle">Figure 9: Same as Figure 8, but with a gray background due to problem in code</p>
                 </div>
