--- a/Images/index.html
+++ b/Images/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+<style>  
+    div.padded {  
+      padding-top: 0px;  
+      padding-right: 100px;  
+      padding-bottom: 0.25in;  
+      padding-left: 100px;  
+    }  
+  </style> 
     <title>Vincent Escueta  |  Colorizing</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -66,7 +74,7 @@
         <div class="slideshow-container">
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/emirEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</p>
                     </div>
@@ -74,7 +82,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/harvestersEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter harvesters.tif: R:[124  15] G:[60 18] TIME:25.585105896</p>
                     </div>
@@ -82,7 +90,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/iconEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter icon.tif: R:[91 23] G:[38 16] TIME:26.5196139812</p>
                     </div>
@@ -90,7 +98,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/ladyEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter lady.tif: R:[114  15] G:[56  9] TIME:29.0473020077</p>
                     </div>
@@ -98,7 +106,7 @@
          </div>
         <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset12 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset1 col-sm-6 text-center photos">
                     <img src="img/self_portraitEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter self_portrait.tif: R:[175  37] G:[77 29] TIME:28.707857132</p>
                     </div>
@@ -106,7 +114,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/three_generationsEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter three_generations.tif: R:[113  11] G:[54 17] TIME:26.2358720303</p>
                     </div>
@@ -114,7 +122,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/trainEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter train.tif: R:[85 34] G:[40  8] TIME:26.7940208912</p>
                     </div>
@@ -122,7 +130,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/turkmenEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter turkmen.tif: R:[116  29] G:[57 22] TIME:27.184166193</p>
                     </div>
@@ -130,7 +138,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/luganoEdgeColored.jpg" width="720px" >
                     <p align="middle">extra lugano.tif: R:[120  32] G:[54  7] TIME:36.9884650707</p>
                     </div>
@@ -138,7 +146,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/stmarksEdgeColored.jpg" width="720px" >
                     <p align="middle">extra stmarks.tif: R:[113  30] G:[47 13] TIME:34.7976961136 </p>
                     </div>
@@ -146,7 +154,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/telescopeEdgeColored.jpg" width="720px" >
                     <p align="middle">extra telescope.tif: R:[144  54] G:[67 30] TIME:37.0999400616</p>
                     </div>
@@ -154,7 +162,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/mozhaiskEdgeColored.jpg" width="720px" >
                     <p align="middle">extra mozhaisk.tif: R:[92 25] G:[41 15] TIME:35.2776269913</p>
                     </div>
@@ -162,7 +170,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/peopleEdgeColored.jpg" width="720px" >
                     <p align="middle">extra people.tif: R:[157  33] G:[72 21] TIME:34.1512980461</p>
                     </div>
@@ -170,7 +178,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/people2EdgeColored.jpg" width="720px" >
                     <p align="middle">extra people2.tif: R:[133  39] G:[62 25] TIME:34.4929409027 </p>
                     </div>
@@ -178,7 +186,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/cathedralEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter cathedral.jpg: R:[12  3] G:[5 2] TIME:0.789291143417</p>
                     </div>
@@ -186,7 +194,7 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/monasteryEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter monastery.jpg: R:[2 2] G:[-3  2] TIME:0.951406002045</p>
                     </div>
@@ -194,7 +202,7 @@
          </div>
         <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset12 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset1 col-sm-6 text-center photos">
                     <img src="img/nativityEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter nativity.jpg: R:[8 0] G:[3 1] TIME:0.773239135742</p>
                     </div>
@@ -202,13 +210,12 @@
          </div>
          <div class="slide">
             <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
+                    <div class="col-lg-8 col-lg-offset-1 col-sm-6 col-sm-offset-1 text-center photos">
                     <img src="img/settlersEdgeColored.jpg" width="720px" >
                     <p align="middle">canny edge filter settlers.jpg: R:[14 -1] G:[7 0] TIME:0.621767044067</p>
                     </div>
                 </div>
          </div>
-         <a class="prev hvr-grow" onclick="plusSlides(-1)">&#10094;</a>
          <a class="next hvr-grow" onclick="plusSlides(1)">&#10095;</a>
         </div>
     </div>
