--- a/GeoMenagerie/index.html
+++ b/GeoMenagerie/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<style>  
-    div.padded {  
-      padding-top: 0px;  
-      padding-right: 100px;  
-      padding-bottom: 0.25in;  
-      padding-left: 100px;  
-    }  
-  </style> 
     <title>Vincent Escueta  |  GeoMenagerie</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -80,8 +72,6 @@
                     <img src="images/part1_with_edges.png" width="800px" />
                     <p align="middle">Figure 1: The result showing the edges and faces</p>
                 </div>
-            </div>
-             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part1_without_edges.png" width="800px" />
                     <p align="middle">Figure 2: Result without showing where the edges and faces are </p>
@@ -103,8 +93,6 @@
                     <img src="images/part2_front.png" width="800px" />
                     <p align="middle">Figure 3: Front of the teapot with averaged normals</p>
                 </div>
-            </div>
-             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part2_back.png" width="800px" />
                     <p align="middle">Figure 4: Back of the teapot with averaged normals</p>
@@ -118,19 +106,19 @@
             </p>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-sm-6 text-center photos">
+                <div class="col-lg-4 col-sm-6 text-center photos">
                     <img src="images/part3_original.png" width="800px" />
                     <p align="middle">Figure 5: Original teapot mesh</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-sm-6 text-center photos">
+                <div class="col-lg-4 col-sm-6 text-center photos">
                     <img src="images/part3_face_messup.png" width="800px" />
                     <p align="middle">Figure 6: Flip edge mess up due to not accounting for face halfedges</p>
                 </div>
             </div>
              <div class="row">
-                <div class="col-lg-6 col-sm-6 text-center photos">
+                <div class="col-lg-4 col-sm-6 text-center photos">
                     <img src="images/part3_flipped_edges.png" width="800px" />
                     <p align="middle">Figure 7: Teapot with flipped edges</p>
                 </div>
@@ -147,8 +135,6 @@
                     <img src="images/part4.png" width="800px" />
                     <p align="middle">Figure 8: After flipping and splitting edges</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part4_drawing.jpg" width="800px" />
                     <p align="middle">Figure 9: Drawing to help me figure out my problems</p>
@@ -259,7 +245,9 @@
                     <img src="images/part5_square_repeat_both3.png" width="400px" />
                     <p align="middle">Figure 29: Center of Figure 26 to show symmetry</p>
                 </div>
-                <div class="col-lg-6 col-sm-6 text-center photos">
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="images/part5_square_repeat_both_no_edges.png" width="400px" />
                     <p align="middle">Figure 30: Figure 29 without showing edges and vertices</p>
                 </div>
@@ -286,8 +274,6 @@
                     <img src="images/part6_phong.png" width="800px" />
                     <p align="middle">Figure 31: Phong shading</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part6_environment.png" width="800px" />
                     <p align="middle">Figure 32: Environment map reflection shading</p>
@@ -306,8 +292,6 @@
                     <img src="images/part7_inspiration.jpg" width="500px" />
                     <p align="middle">Figure 33: The inspiration for the mesh, my dog. Her name is Rey.</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part7_final.png" width="500px" />
                     <p align="middle">Figure 34: The final submission without any subdivision, I think it looks best this way. It's white cause my dog is white</p>
@@ -318,8 +302,6 @@
                     <img src="images/part7_no_upsample_smooth.png" width="500px" />
                     <p align="middle">Figure 35: smoothened before subdivision</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part7_original.png" width="800px" />
                     <p align="middle">Figure 36: The dog mesh without any edits</p>
@@ -330,8 +312,6 @@
                     <img src="images/part7_front.png" width="800px" />
                     <p align="middle">Figure 37: front of dog</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part7_side.png" width="800px" />
                     <p align="middle">Figure 38: side of dog</p>
@@ -342,8 +322,6 @@
                     <img src="images/part7_butt.png" width="800px" />
                     <p align="middle">Figure 39: back of dog</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part7_original_no_edges.png" width="800px" />
                     <p align="middle">Figure 40: The dog mesh without showing the edges and faces</p>
@@ -354,8 +332,6 @@
                     <img src="images/part7_upsample.png" width="800px" />
                     <p align="middle">Figure 41: 1 round of subdivision</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part7_upsample_no_edges.png" width="800px" />
                     <p align="middle">Figure 42: 1 round of subdivision without edges or faces</p>
@@ -366,8 +342,6 @@
                     <img src="images/part7_upsample2.png" width="800px" />
                     <p align="middle">Figure 43: 2 rounds of subdivision</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part7_upsample2_no_edges.png" width="800px" />
                     <p align="middle">Figure 44: 2 rounds of subdivision without edges or faces</p>
@@ -378,8 +352,6 @@
                     <img src="images/part7_upsample2_smooth.png" width="800px" />
                     <p align="middle">Figure 45: 2 rounds of subdivision smooth</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part7_phong1.png" width="800px" />
                     <p align="middle">Figure 46: blue phong shading</p>
@@ -390,8 +362,6 @@
                     <img src="images/part7_phong2.png" width="800px" />
                     <p align="middle">Figure 47: white phong shading</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
                     <img src="images/part7_environment.png" width="800px" />
                     <p align="middle">Figure 48: environment shading</p>
